--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -114,7 +114,7 @@
         {{! [UPDATE EMPLOYEE] form}}
         <div id="updateEmployeeFormWrap" class="hide">
           <form id="updateEmployeeForm" class="formStyle text-start">
-            <div id="hideEmployeeFormsButton" class="btn btn-warning">Hide Form</div>
+            <div id="hideUpdateEmployeeFormsButton" class="btn btn-warning">Hide Form</div>
             <label for="updateEmployeeIdInput">Enter Employee ID you wish to update:</label>
             <br />
 
@@ -162,7 +162,7 @@
               <option value="Frying Oil Dipper">Frying Oil Dipper</option>
               <option value="Janitor">Janitor</option>
             </select>
-            {{! [NEW EMPLOYEE] Submit Button }}
+            {{! [UPDATE EMPLOYEE] Submit Button }}
             <br />
             <br />
             <input id="updateEmployeeSubmitBtn"
