added readme file contents

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -755,12 +755,13 @@ header {
 .images {
   width: 150px;
   height: 90px;
-  -webkit-transition: all 0.7s ease;
-  transition: all 0.7s ease;
+-webkit-transition: all 0.7s ease;
+ transition: all 0.7s ease;
 }
 
 .images:hover {
-  -webkit-filter: saturate(1.5);
+ -webkit-transform:scale(1.4);
+transform:scale(1.1);
 }
 
 #menu-items {
@@ -777,7 +778,7 @@ header {
 
 .table-map {
   margin-top: 20px;
-  width: 70%;
+  width: 80%;
   height: 80px;
   margin-left: 40px;
   background-color: #e87b72;
@@ -785,6 +786,15 @@ header {
   font-size: 1.5rem;
 }
 
+.send-kitchen {
+  margin-top: 6rem;
+  width: 80%;
+  height: 80px;
+  margin-left: 40px;
+  background-color: #e87b72;
+  border-color: #e87b72;
+  font-size: 1.5rem;
+}
 .server-name {
   margin-top: 30px;
   font-size: 2rem;
@@ -826,15 +836,6 @@ header {
   color: green;
 }
 
-.send-kitchen {
-  margin-top: 6rem;
-  width: 80%;
-  height: 80px;
-  margin-left: 40px;
-  background-color: #e87b72;
-  border-color: #e87b72;
-  font-size: 1.5rem;
-}
 
 .send-kitchen:hover,
 .table-map:hover {
@@ -861,6 +862,7 @@ header {
   margin-left: 10px;
   float: right;
   margin-right: 10px;
+  margin-bottom: 30px;
   padding: 0 10px;
   font-size: 20px;
 }
