--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -322,6 +322,7 @@
         <div id="menuTableWrap">
         </div>
       </div>
+      
       <!-- TABLES wrap -->
       <div id="tablesWrap" class="hide">
         <div id="tablesButtonsWrap">
@@ -332,6 +333,13 @@
         </div>
         {{!-- [NEW TABLE] form --}}
         <div id="newTableFormWrap" class="hide">
+          <table style="width:100%; text-align:start">
+            <tr>
+              <th style="width: 20%">ID</th>
+              <th style="width: 40%">Name</th>
+              <th style="width: 40%">Max-Size</th>
+            </tr>
+          </table>
           <form id="newTableForm" class="formStyle text-start">
             <div id="hideTableFormsButton" class="btn btn-warning">Hide Form</div>
             {{! [NEW TABLE] name }}
