--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -202,9 +202,11 @@
             <th style="width: 25%">E-mail</th>
           </tr>
         </table>
-<div id="employeeTableWrap">
+        {{! employees populate here }}
+        <div id="employeeTableWrap">
         </div>
       </div>
+
       <!-- MENU wrap -->
       <div id="menuWrap" class="hide">
         {{!-- Action Buttons for Menu Items --}}
@@ -219,7 +221,6 @@
           <div type="button" class="btn btn-danger display-action-btn">Remove an
             Item</div>
         </div>
-
         {{! [NEW ITEM] form}}
         <div id="newItemFormWrap" class="hide">
           <form id="newItemForm" class="formStyle text-start">
@@ -333,13 +334,6 @@
         </div>
         {{!-- [NEW TABLE] form --}}
         <div id="newTableFormWrap" class="hide">
-          <table style="width:100%; text-align:start">
-            <tr>
-              <th style="width: 20%">ID</th>
-              <th style="width: 40%">Name</th>
-              <th style="width: 40%">Max-Size</th>
-            </tr>
-          </table>
           <form id="newTableForm" class="formStyle text-start">
             <div id="hideTableFormsButton" class="btn btn-warning">Hide Form</div>
             {{! [NEW TABLE] name }}
@@ -383,9 +377,21 @@
               value="Remove the Table"
             />
           </form>
-        </div>
         <div id="ordersTableWrap"></div>
-      </div>
+        </div>
+
+        {{!-- tables dbTable headers --}}
+        <table style="width:100%; text-align:start">
+            <tr>
+              <th style="width: 20%">ID</th>
+              <th style="width: 40%">Name</th>
+              <th style="width: 40%">Max-Size</th>
+            </tr>
+        </table>
+        {{!-- tables populate here --}}
+        <div id="tablesTableWrap"></div>
+
+
       <!-- ORDERS wrap -->
       <div id="ordersWrap" class="hide">
         <div id="ordersButtonsWrap">
