--- a/views/checkout.handlebars
+++ b/views/checkout.handlebars
@@ -196,6 +196,13 @@
                                                     <input type="text" class="payBtn-form-style form-style" name="Billing Name" value="John Doe" 
                                                       placeholder="Cardholder Name"  autocomplete="off" id="cardholderName">
                                                   </div>
+                                                  <div class="payBtn-form-group form-group">
+                                                    <input type="email" class="payBtn-form-style form-style" id="Email" name="Email" value="john@aol.com"/>
+                                                  </div>
+                                                  <input type="hidden" name="FailureCallback" value="epxFailureCallback" />
+                                                    <input type="hidden" name="SuccessCallback" value="epxSuccessCallback" />
+                                                    <input type="hidden" name="PublicKey" value="eyAidGVybWluYWxQcm9maWxlSWQiOiAiMmNlN2RmMmMtY2I4Ni00MmNmLWI2NjMtNTAxOGQxMjA3NzMyIiB9" />
+                                                    <input type="hidden" name="Captcha" value="bypass" />
                                                   <h6 class="pt-3 payBtn-h4 errorMessage" id="cardMessage"></h6>
                                                 </form>
                                               </div>
@@ -210,7 +217,7 @@
 
                             </div>
                             <div class="modal-footer">
-                              <button id="paySubmit" type="submit" class="btn btn-primary btn-lg">
+                              <button id="paySubmit" onclick="Epx.sendPost()" type="submit" class="btn btn-primary btn-lg">
                                 Submit
                               </button>
                             </div>
