fixed css for homepage, landing page, and tables page

--- a/views/tableMap.handlebars
+++ b/views/tableMap.handlebars
@@ -1,5 +1,6 @@
 {{> header}}
-<div class="row table-linear">
+<div id="tableMap">
+  <div class="row table-linear">
   <div class="col-9">
     <header>Tables</header>
     <div id="tables" class="container">
@@ -72,5 +73,6 @@
   >Admin Settings</a>
 
 </div>
+  </div>
 </div>
 <script src="/js/tableMap.js"></script>
