--- a/public/css/style.css
+++ b/public/css/style.css
@@ -524,7 +524,17 @@ html {
 /* --------------------------------------------------------------- */
 
 /* START OF HOMEPAGE CSS  */
+
+#homepage {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100vw;
+  min-height: 100vh;
+}
+
 .homepage-body {
+  flex-grow: 1;
   text-align: center;
   background-color: black;
 }
@@ -544,7 +554,7 @@ html {
 #lower-btns {
   display: flex;
   justify-content: center;
-  gap: 3%;
+  gap: 10%;
   margin-top: 25px;
 }
 
@@ -573,7 +583,14 @@ html {
 
 /* Start of tables css*/
 
+#tableMap {
+  display: flex;
+  width: 100vw;
+  min-height: 100vh;
+}
+
 .table-linear {
+  flex-grow: 1;
   background-image: linear-gradient(
     to right,
     rgba(217, 104, 109, 1),
@@ -671,7 +688,14 @@ header {
 
 /* START OF LANDING PAGE CSS*/
 
+#theLandingPage {
+  display: flex;
+  width: 100vw;
+  min-height: 100vh;
+}
+
 .landing-page {
+  flex-grow: 1;
   margin-top: 80px;
   background-image: linear-gradient(
     to right,
