--- a/views/landingPage.handlebars
+++ b/views/landingPage.handlebars
@@ -1,4 +1,5 @@
 {{> header}}
+<div id="theLandingPage">
 <section class="landing-page">
     <div class="container">
         <div class="row d-flex">
@@ -95,3 +96,4 @@
     </div>
     <script src="/js/landingpage.js"></script>
 </section>
+</div>
