final fixes, payment, employee login restrictions

--- a/views/checkout.handlebars
+++ b/views/checkout.handlebars
@@ -197,7 +197,7 @@
                                                       placeholder="Cardholder Name"  autocomplete="off" id="cardholderName">
                                                   </div>
                                                   <div class="payBtn-form-group form-group">
-                                                    <input type="email" class="payBtn-form-style form-style" id="Email" name="Email" value="john@aol.com"/>
+                                                    <input type="email" class="payBtn-form-style form-style" style="margin-top: 6px;" id="Email" name="Email" value="john@aol.com"/>
                                                   </div>
                                                   <input type="hidden" name="FailureCallback" value="epxFailureCallback" />
                                                     <input type="hidden" name="SuccessCallback" value="epxSuccessCallback" />
