--- a/views/userLogin.handlebars
+++ b/views/userLogin.handlebars
@@ -18,7 +18,7 @@
                     id="employeeLogin"
                     class="form-control form-control-lg"
                   />
-                  <label class="form-label" for="employeeLogin">Login ID</label>
+                  <label class="form-label" id="login-fail-message" for="employeeLogin">Login ID</label>
                 </div>
 
                 <button
