--- a/views/merchantSettings.handlebars
+++ b/views/merchantSettings.handlebars
@@ -1,12 +1,13 @@
 {{> header}}
-<div class="body">
+<div id="merchantSettings">
+<div class="merchantBody">
 <div id="pwCheck" style="margin-top:65px;">
   <div class="form-outline form-white mb-4">
     <p class="enter-text">Please enter the password for your merchant account:</p>
     <input
       type="password"
       id="merchantPassword"
-      class="form-control form-control-lg"
+      class="form-control form-control-lg w-25"
     />
     <label class="form-label password-text" for="merchantPassword">Password</label>
     </br>
@@ -144,5 +145,6 @@
     Return to Employee Login
   </button>
 </a>
+</div>
 </div>
 <script src="/js/merchantSettings.js"></script>
