--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -58,8 +58,7 @@
           {{#if sesh.employeeLoggedIn}}
           {{#if sesh.isAdmin}}
             <li class="nav-item">
-              <a class="nav-link" href="/pos/admin"><p class="settings-item">POS
-                  Admin</p></a>
+              <a class="nav-link" href="/pos/admin"><p class="settings-item">Admin Settings</p></a>
             </li>
             {{/if}}
           {{/if}}
