updated merchant settings css

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -901,6 +901,15 @@ header {
   );
 }
 
+.mSettingsInputs {
+  margin: auto;
+  width: 25%;
+}
+
+.stateInputDiv {
+  margin: auto;
+}
+
 #merchantPassword {
   margin: auto;
 }
@@ -918,9 +927,9 @@ header {
   font-weight: bold;
 }
 
-#returnBtn {
-  margin-left: 20px;
+.returnBtn {
   margin-top: 20rem;
+  margin-bottom: 1rem;
 }
 
 .login-settings-btn {
