--- a/views/merchantSettings.handlebars
+++ b/views/merchantSettings.handlebars
@@ -140,16 +140,16 @@
     </div>
   </div>
 </div>
-<a href="/pos/tables">
   <button class="btn btn-dark returnBtn">
+<a href="/pos/tables" class="returnAnchor">
     Return to Table Map
-  </button>
 </a>
-<a href="/pos/login">
+  </button>
   <button class="btn btn-dark returnBtn">
+<a href="/pos/login" class="returnAnchor">
     Return to Employee Login
-  </button>
 </a>
+  </button>
 </div>
 </div>
 <script src="/js/merchantSettings.js"></script>
