--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -259,24 +259,24 @@
             <br />
             <select id="itemTypeIn"class="form-select" aria-label="type">
               <option selected>Type</option>
-              <option value="1">Food</option>
-              <option value="2">Drink</option>
-              <option value="3">Merchendise</option>
-              <option value="4">Gift</option>
+              <option value="Food">Food</option>
+              <option value="Drink">Drink</option>
+              <option value="Merchendise">Merchendise</option>
+              <option value="Gift">Gift</option>
             </select>
 
             {{! [NEW ITEM] Sub-Type }}
             <br />
             <select id="itemSubtypeIn" class="form-select" aria-label="sub-type">
               <option selected>Sub-Type</option>
-              <option value="1">Main Course</option>
-              <option value="2">Appetizer</option>
-              <option value="3">Alcoholic</option>
-              <option value="4">Non-Alcoholic</option>
-              <option value="5">Hat</option>
-              <option value="6">Shirt</option>
-              <option value="7">Card</option>
-              <option value="8">Certificate</option>
+              <option value="Main Course">Main Course</option>
+              <option value="Appetizer">Appetizer</option>
+              <option value="Alcoholic">Alcoholic</option>
+              <option value="Non-Alcoholic">Non-Alcoholic</option>
+              <option value="Hat">Hat</option>
+              <option value="Shirt">Shirt</option>
+              <option value="Card">Card</option>
+              <option value="Certificate">Certificate</option>
             </select>
 
             {{! [NEW ITEM] Image URL }}
@@ -408,6 +408,5 @@
       </div>
     </div>
   </div>
-
 </section>
 <script src="/js/admin.js"></script>
