final checks on bells and whistles

--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -27,14 +27,14 @@
       >
         View Tables
       </div>
-      <!-- VIEW ORDERS button -->
-      <div
+      <!-- VIEW ORDERS button [ICEBOX -____-]-->
+      {{!-- <div
         id="viewOrders"
         type="button"
         class="btn action-btn btn-light view-orders"
       >
         View Orders
-      </div>
+      </div> --}}
     </div>
     <!-- DISPLAY -->
     <div id="sidebarDisplay" class="col-8">
